plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.icfes-group'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-integration'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.integration:spring-integration-http'
	implementation 'org.springframework.integration:spring-integration-jpa'
	implementation 'org.springframework.integration:spring-integration-mail'
	implementation 'org.springframework.security:spring-security-messaging'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.integration:spring-integration-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
	implementation "org.liquibase:liquibase-core:4.24.0"

	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.github.ben-manes.caffeine:caffeine'


	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
        runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
        runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8" // usa jackson para parsear JSON

}

springBoot {
    mainClass = 'com.icfes_group.IcfesMainApplication'  // Ajusta esto según tu clase principal
}

tasks.named('test') {
	useJUnitPlatform()
}

task liquibaseUpdate(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    main = 'liquibase.integration.commandline.Main'
    args = [
        "--url=${project.findProperty('spring.datasource.url')}",
        "--username=${project.findProperty('spring.datasource.username')}",
        "--password=${project.findProperty('spring.datasource.password')}",
        "--changeLogFile=src/main/resources/db/changelog/db.changelog-master.xml",
        "update"
    ]
}
